[package]
name = "classpad-image"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "A package to convert images to C2P and C2B files."
repository = "https://github.com/TAugustL/classpad-image"
readme = "README.md"

[dependencies]
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "bmp", "webp"] }
miniz_oxide = { version = "0.8.5", default-features = false }
